--- a/02-chapter_of_course.Rmd
+++ b/02-chapter_of_course.Rmd
@@ -6,25 +6,32 @@ output: html_document
 
 ```{r,include=FALSE}
 library(here)
+library(ggplot2)
+library(magrittr)
 ```
 
 # Topic of Course
 
-
-Research is becoming more and more multidisciplinary. This requires more flexibility to communicate with team members with distinct backgrounds. Furthermore, team members often have different research and career goals. This can present unique challenges in making sure that everyone is on the same page and cohesively working together. This course aims to provide research leaders with guidance about:  
-
- 1) how to effectively lead team members on informatics projects  
- 2) how to perform informatics projects well   
-
-We will provide you with an awareness for the **specific challenges** that your informatics collaborators, employees, and mentees might face, as well as ways to mitigate these challenges. By creating a better work environment for your informatics research team, you will ultimately improve the potential impact of your work. 
-
-We will also discuss the major pitfalls of informatics research and discuss best practices for performing informatics research correctly and well, so that you can get the most out of your informatics projects. 
+Text text
 
 ## Subtopic
 
 Text Text 
 
+```{r}
+iris %>% 
+  ggplot(aes(Sepal.Length, Sepal.Width, color = Species)) + 
+  geom_point() + 
+  theme_bw()
+```
+
+
+```{r}
+ggsave(file.path("test_ggplot2.png"))
+```
+
 ![](images/itcr_training_network.png)
+
 More text
 
 ![](images/tools.png)
