--- a/packages.bib
+++ b/packages.bib
@@ -3,7 +3,7 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2020},
+  year = {2021},
   url = {https://www.R-project.org/},
 }
 
@@ -27,8 +27,8 @@
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2021},
-  note = {https://rmarkdown.rstudio.com/docs/,
-https://github.com/rstudio/rmarkdown},
+  note = {R package version 2.7},
+  url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 
 @Book{bookdown2016,
