--- a/02-chapter_of_course.Rmd
+++ b/02-chapter_of_course.Rmd
@@ -40,9 +40,9 @@ ggsave(file.path(output_dir, "test_ggplot2.png"))
 
 ### Image examples
 
-![](images/itcr_training_network.png)
+![](resources/images/itcr_training_network.png)
 
-![](images/tools.png)
+![](resources/images/tools.png)
 
 ### Video example
 
@@ -59,5 +59,6 @@ In text, we can put citations like this @bookdown2016.
 ```{r}
 devtools::session_info()
 ```
+
 ## References 
 
