--- a/packages.bib
+++ b/packages.bib
@@ -3,7 +3,7 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2020},
+  year = {2021},
   url = {https://www.R-project.org/},
 }
 
@@ -11,24 +11,64 @@
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
   year = {2020},
-  note = {R package version 0.20},
+  note = {R package version 0.21},
   url = {https://github.com/rstudio/bookdown},
+}
+
+@Manual{R-colorout,
+  title = {colorout: Colorize R Output on Terminal Emulators},
+  author = {Jakson Aquino and Dominique-Laurent Couturier},
+  year = {2019},
+  note = {R package version 1.2-2},
+  url = {https://github.com/jalvesaq/colorout},
+}
+
+@Manual{R-ggplot2,
+  title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
+  author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
+  year = {2020},
+  note = {R package version 3.3.3},
+  url = {https://CRAN.R-project.org/package=ggplot2},
+}
+
+@Manual{R-here,
+  title = {here: A Simpler Way to Find Your Files},
+  author = {Kirill Müller},
+  year = {2020},
+  note = {R package version 1.0.1},
+  url = {https://CRAN.R-project.org/package=here},
 }
 
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
-  year = {2020},
-  note = {R package version 1.30},
+  year = {2021},
+  note = {R package version 1.32},
   url = {https://yihui.org/knitr/},
+}
+
+@Manual{R-leanbuild,
+  title = {leanbuild: Tools for Creating Automated Courses},
+  author = {John Muschelli and Shannon Ellis},
+  note = {R package version 0.1.0},
+  url = {https://github.com/muschellij2/didactr},
+  year = {2021},
+}
+
+@Manual{R-magrittr,
+  title = {magrittr: A Forward-Pipe Operator for R},
+  author = {Stefan Milton Bache and Hadley Wickham},
+  year = {2020},
+  note = {R package version 2.0.1},
+  url = {https://CRAN.R-project.org/package=magrittr},
 }
 
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
-  year = {2020},
-  note = {R package version 2.4},
-  url = {https://github.com/rstudio/rmarkdown},
+  year = {2021},
+  note = {R package version 2.7},
+  url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 
 @Book{bookdown2016,
@@ -39,6 +79,15 @@
   year = {2016},
   note = {ISBN 978-1138700109},
   url = {https://github.com/rstudio/bookdown},
+}
+
+@Book{ggplot22016,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2016},
+  isbn = {978-3-319-24277-4},
+  url = {https://ggplot2.tidyverse.org},
 }
 
 @Book{knitr2015,
