--- a/02-chapter_of_course.Rmd
+++ b/02-chapter_of_course.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Chapter title"
+title: "Chapter of course"
 output: html_document
 bibliography: [book.bib, packages.bib]
 biblio-style: apalike
@@ -65,7 +65,7 @@ ggsave(file.path(output_dir, "test_ggplot2.png"))
 ### Citation examples
 
 We can put citations at the end of a sentence like this [@bookdown2016]. 
-Or multiple citations [@bookdown2016,@rmarkdown2018]. 
+Or multiple citations [@bookdown2016, @rmarkdown2018]. 
 
 but they need a ; separator [@bookdown2016; @rmarkdown2018]. 
 
