added in the google slide pngs

--- a/03-test_cases.Rmd
+++ b/03-test_cases.Rmd
@@ -47,7 +47,7 @@ knitr::include_url("https://www.youtube.com/watch?v=9bZkp7q19f0?rel=0")
 
 ```{r}
 # define GS_ID
-leanbuild::include_slide("https://docs.google.com/presentation/d/12DPZgPteQBwgal6kSPP58zhPhjZ7QSPZLe3NkA8M3eo/edit#slide=id.gc87451c247_0_17", output_dir = knitr::fig_path(), overwrite = FALSE)
+leanbuild::include_slide("https://docs.google.com/presentation/d/12DPZgPteQBwgal6kSPP58zhPhjZ7QSPZLe3NkA8M3eo/edit#slide=id.gc87451c247_0_17", overwrite = FALSE)
 ```
 
 
