--- a/02-chapter_of_course.Rmd
+++ b/02-chapter_of_course.Rmd
@@ -3,6 +3,10 @@ title: "Chapter title"
 output: html_document
 ---
 
+```{r include=FALSE}
+knitr::opts_chunk$set(fig.path = "resources/images/<COURSE_TAG>")
+```
+
 ## Learning Objectives
 
 This chapter will cover:  
@@ -12,7 +16,7 @@ This chapter will cover:
 
 ## Libraries
 
-For this chapter, we'll need the following packages attached. 
+For this chapter, we'll need the following packages attached.
 
 ```{r}
 library(here)
@@ -26,7 +30,7 @@ Text Text
 
 ## Subtopic
 
-Text Text 
+Text Text
 
 ### Code examples
 
@@ -60,13 +64,12 @@ ggsave(file.path(output_dir, "test_ggplot2.png"))
 
 ### Citation examples
 
-We can put citations at the end of a sentence like this [@bookdown2016]. 
+We can put citations at the end of a sentence like this [@bookdown2016].
 
-In text, we can put citations like this @bookdown2016. 
+In text, we can put citations like this @bookdown2016.
 
 ## Print out session info
 
 ```{r}
 devtools::session_info()
 ```
-
