Transfer files from test cases PR

--- a/02-chapter_of_course.Rmd
+++ b/02-chapter_of_course.Rmd
@@ -3,8 +3,12 @@ title: "Chapter title"
 output: html_document
 ---
 
-```{r include=FALSE}
-knitr::opts_chunk$set(fig.path = "resources/images/<COURSE_TAG>")
+```{r, include=FALSE}
+fp <- knitr::fig_path()
+fp <- dirname(fp)
+fp <- paste0("images/", fp, "/")
+print(paste0("figpath is ", fp))
+knitr::opts_chunk$set(fig.path = fp)
 ```
 
 ## Learning Objectives
