--- a/03-test_cases.Rmd
+++ b/03-test_cases.Rmd
@@ -1,7 +1,11 @@
 # Uses cases for Bookdown to Leanpub
 
-```{r include=FALSE}
-knitr::opts_chunk$set(fig.path = "resources/images/<COURSE_TAG>")
+```{r, include=FALSE}
+fp <- knitr::fig_path()
+fp <- dirname(fp)
+fp <- paste0("images/", fp, "/")
+print(paste0("figpath is ", fp))
+knitr::opts_chunk$set(fig.path = fp)
 ```
 
 Including a figure from the resources.  This shouldn't be an issue in the future
