--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -3,13 +3,21 @@ title: "Course Title"
 output: html_document
 ---
 
-# Introduction 
+```{r, include=FALSE}
+fp <- knitr::fig_path()
+fp <- dirname(fp)
+fp <- paste0("images/", fp, "/")
+print(paste0("figpath is ", fp))
+knitr::opts_chunk$set(fig.path = fp)
+```
+
+# Introduction
 
 ## Motivation
-This course will cover 
+This course will cover
 
 **Target Audience:**  
-The course is intended for 
+The course is intended for
 
 **Curriculum:**  
 The curriculum will cover
