--- a/04-figures.Rmd
+++ b/04-figures.Rmd
@@ -5,12 +5,9 @@ output: html_document
 
 # Figures
 
-```{r, include=FALSE}
-fp <- knitr::fig_path()
-fp <- dirname(fp)
-fp <- paste0("images/", fp, "/")
-print(paste0("figpath is ", fp))
-knitr::opts_chunk$set(fig.path = fp)
+
+```{r, include = FALSE}
+leanbuild::set_knitr_image_path()
 ```
 
 ## Make a plot
