rerun with leanbuild latest

--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -5,7 +5,7 @@ output: html_document
 
 
 ```{r, include = FALSE}
-#leanbuild::set_knitr_image_path()
+leanbuild::set_knitr_image_path()
 ```
 
 # Introduction
