--- a/03-test_cases.Rmd
+++ b/03-test_cases.Rmd
@@ -1,6 +1,6 @@
 
 ```{r, include = FALSE}
-# leanbuild::set_knitr_image_path()
+leanbuild::set_knitr_image_path()
 ```
 
 # Uses cases for Bookdown to Leanpub
