--- a/04-figures.Rmd
+++ b/04-figures.Rmd
@@ -7,7 +7,7 @@ output: html_document
 
 
 ```{r, include = FALSE}
-#leanbuild::set_knitr_image_path()
+leanbuild::set_knitr_image_path()
 ```
 
 ## Make a plot
