--- a/03-test_cases.Rmd
+++ b/03-test_cases.Rmd
@@ -1,73 +1,80 @@
 
-```{r, include = FALSE}
+```{r, include = FALSE, echo = FALSE}
 leanbuild::set_knitr_image_path()
 ```
 
 # Uses cases for Bookdown to Leanpub
 
-Including a figure from the resources.  This shouldn't be an issue in the future
-```{r, out.width="100%", fig.cap = "caption for first figure, we need multiple so make sure it works"}
+1)
+```{r, out.width="100%", fig.cap = "caption for first figure, we need multiple so make sure it works", echo = FALSE}
 knitr::include_graphics("resources/images/itcr_training_network.png")
 ```
 
-
-```{r empty_cap, out.width="100%", fig.alt = "THIS IS AN ALT center align it's a training network", fig.align='center', fig.cap=""}
+2)
+```{r empty_cap, out.width="100%", fig.alt = "THIS IS AN ALT center align it's a training network", fig.align='center', fig.cap="", echo = FALSE}
 knitr::include_graphics("resources/images/itcr_training_network.png")
 ```
 
-
-```{r space_caption, out.width="100%", fig.alt = "THIS IS AN ALT center align it's a training network", fig.align='center', fig.cap=" "}
+3)
+```{r space_caption, out.width="100%", fig.alt = "THIS IS AN ALT center align it's a training network", fig.align='center', fig.cap=" ", echo = FALSE}
 knitr::include_graphics("resources/images/itcr_training_network.png")
 ```
 
-
-```{r cool_stuff, out.width="100%", fig.alt = "center align it's a training network", fig.align='center'}
+4)
+```{r cool_stuff, out.width="100%", fig.alt = "center align it's a training network", fig.align='center', echo = FALSE}
 knitr::include_graphics("resources/images/itcr_training_network.png")
 ```
 
-```{r tools, out.width="100%", fig.alt = "left align it's a tool", fig.align='left'}
+5)
+```{r tools, out.width="100%", fig.alt = "left align it's a tool", fig.align='left', echo = FALSE}
 knitr::include_graphics("resources/images/tools.png")
 ```
 
-```{r right_tools, out.width="100%", fig.cap="caption for local png", fig.alt = "right align it's a tool", fig.align='right'}
+6)
+```{r right_tools, out.width="100%", fig.cap="caption for local png", fig.alt = "right align it's a tool", fig.align='right', echo = FALSE}
 knitr::include_graphics("resources/images/tools.png")
 ```
 
-```{r, fig.cap="caption for url png"}
+7)
+```{r, fig.cap="caption for url png", echo = FALSE}
 knitr::include_graphics("https://upload.wikimedia.org/wikipedia/commons/e/e9/Felis_silvestris_silvestris_small_gradual_decrease_of_quality.png")
 ```
 
-
-Including a figure from the resources.  This shouldn't be an issue in the future
-```{r, fig.cap="url cap"}
+8)
+```{r, fig.cap="url cap", echo = FALSE}
 knitr::include_url("http://www.youtube.com/embed/9bZkp7q19f0?rel=0")
 ```
 
-```{r url_nocap}
+9)
+```{r url_nocap, echo = FALSE}
 knitr::include_url("http://www.youtube.com/embed/9bZkp7q19f0?rel=0")
 ```
 
+10)
 ![Introducing Markua](https://www.youtube.com/watch?t=105&v=VOCYL-FNbr0)
 
 
-```{r, fig.cap="caption for url"}
+11)
+```{r, fig.cap="caption for url", echo = FALSE}
 knitr::include_url("https://www.youtube.com/watch?v=9bZkp7q19f0?rel=0")
 ```
 
-```{r}
+12)
+```{r, echo = FALSE}
 # define GS_ID
 leanbuild::include_slide("https://docs.google.com/presentation/d/12DPZgPteQBwgal6kSPP58zhPhjZ7QSPZLe3NkA8M3eo/edit#slide=id.gc87451c247_0_17", overwrite = FALSE)
 ```
 
-```{r, fig.alt = "picture of stuff"}
+13)
+```{r, fig.alt = "picture of stuff", echo = FALSE, echo = FALSE}
 # define GS_ID
 leanbuild::include_slide("https://docs.google.com/presentation/d/12DPZgPteQBwgal6kSPP58zhPhjZ7QSPZLe3NkA8M3eo/edit#slide=id.gc87451c247_0_17", overwrite = FALSE)
 ```
 
-
-
-```{r, eval = FALSE}
+14)
+```{r, eval = FALSE, echo = FALSE}
 knitr::include_url("https://docs.google.com/presentation/d/1cd434bkLer_CJ04GzpsZwzeEA9gjc5Ho6QimiHPbyEg/export/png?id=1cd434bkLer_CJ04GzpsZwzeEA9gjc5Ho6QimiHPbyEg&pageid=p")
 ```
 
+15)
 <p align="center"><iframe src="https://widgets.figshare.com/articles/5427418/embed?show_title=1" width="568" height="351" allowfullscreen frameborder="0" alt = "expectation document"></iframe></p>
