Get rid of devtools dependency

--- a/02-chapter_of_course.Rmd
+++ b/02-chapter_of_course.Rmd
@@ -135,5 +135,5 @@ In text, we can put citations like this @rmarkdown2021.
 ## Print out session info
 
 ```{r}
-devtools::session_info()
+sessionInfo()
 ```
