Update all the GitHub links

--- a/02-chapter_of_course.Rmd
+++ b/02-chapter_of_course.Rmd
@@ -3,7 +3,7 @@ title: "Chapter of course"
 ---
 
 
-*If you haven't yet read the getting started guide; [start there](https://github.com/jhudsl/DaSL_Course_Template_Bookdown/blob/main/getting_started.md)
+*If you haven't yet read the getting started Wiki pages; [start there](https://github.com/jhudsl/DaSL_Course_Template_Bookdown/wiki/Getting-started)
 
 Every chapter needs to start out with this chunk of code:
 
@@ -24,7 +24,7 @@ This chapter will cover:
 
 For this chapter, we'll need the following packages attached:
 
-*Remember to add [any additional packages you need to your course's own docker image](https://github.com/jhudsl/DaSL_Course_Template_Bookdown/blob/main/getting_started.md#setting-up-the-docker-image).
+*Remember to add [any additional packages you need to your course's own docker image](https://github.com/jhudsl/DaSL_Course_Template_Bookdown/wiki/Using-Docker#starting-a-new-docker-image).
 
 ```{r}
 library(magrittr)
