--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Course Name "
 author: "Author Name"
-date: "`r Sys.Date()`"
+date: "`r format(Sys.time(), '%B, %Y')`" 
 site: bookdown::bookdown_site
 documentclass: book
 biblio-style: apalike
