Add to dictionary.txt

--- a/index-itcr.Rmd
+++ b/index-itcr.Rmd
@@ -1,7 +1,7 @@
---- 
+---
 title: "Informatics Technology for Cancer Research (ITCR): Course Name "
 author: "Author Name"
-date: "`r Sys.Date()`"
+date: "`r format(Sys.time(), '%B, %Y')`"
 site: bookdown::bookdown_site
 documentclass: book
 bibliography: [book.bib, packages.bib]
@@ -21,4 +21,3 @@ knitr::write_bib(c(
 # About this Course {-}
 
 This course is part of a series of courses for the [Informatics Technology for Cancer Research (ITCR)](https://itcr.cancer.gov/) called the Informatics Technology for Cancer Research Education Resource. This material was created by the ITCR Training Network (ITN)  which is a collaborative effort of researchers around the United States to support cancer informatics and data science training through resources, technology, and events. This initiative is funded by the following grant:  [National Cancer Institute (NCI)](https://www.cancer.gov/)  UE5 CA254170. Our courses feature tools developed by ITCR Investigators and make it easier for principal investigators, scientists, and analysts to integrate cancer informatics into their workflows. Please see our website at [www.itcrtraining.org](www.itcrtraining.org) for more information.
-
