Incorporating Carriewright review

--- a/About.Rmd
+++ b/About.Rmd
@@ -4,10 +4,23 @@ title: "About"
 
 # About the Authors {-}
 
-|Name|Credit(s)|Bio|
-|-----------|---------|---|
-|Rey Skywalker|Lead Content Instructor, Packages|Rey is a Blank in the Blank at the Blank.|
-|   |   |   |
-|   |   |   |
+|Credit(s)|Name(s)|
+|---------|-------|
+|Jedi| [Rey Skywalker](www.rey-professional-website.com)
 
-<!-- Fill out this table using these instructions: https://github.com/jhudsl/DaSL_Course_Template_Bookdown/wiki/How-to-give-credits -->
+
+These credits are based on our [course contributors table guidelines](https://github.com/jhudsl/DaSL_Course_Template_Bookdown/wiki/How-to-give-credits).
+<!-- Fill out this table using these instructions: https://github.com/jhudsl/DaSL_Course_Template_Bookdown/wiki/How-to-give-credits
+
+
+For JHU courses, these are credits you will need to have in your table from the start.
+
+|Credit(s)|Name(s)|
+|---------|-------|
+|Content Directory|[Jeff Leek](https://jtleek.com/)|
+|Content Publisher|[Ira Gooding](https://provost.jhu.edu/members/ira-gooding/)|
+|Template Publishing Engineer|[Candace Savonen](https://www.cansavvy.com/), [Carrie Wright](https://carriewright11.github.io/)|
+|Publishing Maintainence Engineer|[Candace Savonen](https://www.cansavvy.com/)|
+|Technical Publishing Stylist|[Carrie Wright](https://carriewright11.github.io/), [Candace Savonen](https://www.cansavvy.com/)|
+|Packages|[John Muschelli](https://johnmuschelli.com/), [Candace Savonen](https://www.cansavvy.com/), [Carrie Wright](https://carriewright11.github.io/)|
+-->
