--- a/About.Rmd
+++ b/About.Rmd
@@ -18,6 +18,6 @@ These credits are based on our [course contributors table guidelines](https://gi
 
 For JHU courses, You will need to add Ira as a credit:
 
-|Content Publisher|[Ira Gooding](https://provost.jhu.edu/members/ira-gooding/)|
+|Content Publisher|[Ira Gooding](https://publichealth.jhu.edu/faculty/4130/ira-gooding)|
 
 -->
