adding and fixing favicons

--- a/index-itcr.Rmd
+++ b/index-itcr.Rmd
@@ -1,6 +1,5 @@
 ---
 title: "Informatics Technology for Cancer Research (ITCR): Course Name "
-author: "Author Name"
 date: "`r format(Sys.time(), '%B, %Y')`"
 site: bookdown::bookdown_site
 documentclass: book
@@ -8,6 +7,7 @@ bibliography: [book.bib, packages.bib]
 biblio-style: apalike
 link-citations: yes
 description: "Description about Course/Book."
+favicon: assets/ITN_favicon.ico
 ---
 
 
