--- a/index.Rmd
+++ b/index.Rmd
@@ -7,7 +7,7 @@ bibliography: [book.bib, packages.bib]
 biblio-style: apalike
 link-citations: yes
 description: "Description about Course/Book."
-favicon: assets/favicon.ico
+favicon: assets/dasl_favicon.ico
 ---
 
 ```{r include=FALSE}
