--- a/index.Rmd
+++ b/index.Rmd
@@ -1,11 +1,13 @@
 ---
 title: "Course Name "
-author: "Author Name"
 date: "`r format(Sys.time(), '%B, %Y')`"
 site: bookdown::bookdown_site
 documentclass: book
+bibliography: [book.bib, packages.bib]
 biblio-style: apalike
+link-citations: yes
 description: "Description about Course/Book."
+favicon: assets/dasl_favicon.ico
 ---
 
 ```{r include=FALSE}
