updating credits table

--- a/About.Rmd
+++ b/About.Rmd
@@ -8,14 +8,38 @@ These credits are based on our [course contributors table guidelines](https://gi
 
 |Credits|Names|
 |-------|-----|
-|Lead Content Instructor|[FirstName LastName](link to personal website)|
-|Template Publishing Engineer|[Candace Savonen](https://www.cansavvy.com/), [Carrie Wright](https://carriewright11.github.io/)|
-|Publishing Maintainence Engineer|[Candace Savonen](https://www.cansavvy.com/)|
-|Technical Publishing Stylist|[Carrie Wright](https://carriewright11.github.io/), [Candace Savonen](https://www.cansavvy.com/)|
-|Packages|[John Muschelli](https://johnmuschelli.com/), [Candace Savonen](https://www.cansavvy.com/), [Carrie Wright](https://carriewright11.github.io/)|
+|**Pedagogy**||
+|Lead Content Instructor(s)|[FirstName LastName](link to personal website)|
+|Lecturer(s) (include chapter name/link in parentheses if only for specific chapters) - make new line if more than one chapter involved| Delivered the course in some way - video or audio|
+|Content Author(s) (include chapter name/link in parentheses if only for specific chapters) - make new line if more than one chapter involved | If any other authors besides lead instructor| 
+|Content Contributor(s) (include section name/link in parentheses) - make new line if more than one section involved|  Wrote less than a chapter|
+|Content Editor(s)/Reviewer(s) | Checked your content|
+|Content Director(s) | Helped guide the content direction|
+|Content Consultants (include chapter name/link in parentheses or word "General") - make new line if more than one chapter involved | Gave high level advice on content|
+|Acknowledgments| Gave small assistance to content but not to the level of consulting |
+|**Production**||
+|Content Publisher(s)| Helped with publishing platform|
+|Content Publishing Reviewer(s)| Reviewed overall content and aesthetics on publishing platform|
+|**Technical**||
+|Course Publishing Engineer(s)| Helped with the code for the technical aspects related to the specific course generation|
+|Template Publishing Engineers|[Candace Savonen](https://www.cansavvy.com/), [Carrie Wright](https://carriewright11.github.io/)|
+|Publishing Maintenance Engineer|[Candace Savonen](https://www.cansavvy.com/)|
+|Technical Publishing Stylists|[Carrie Wright](https://carriewright11.github.io/), [Candace Savonen](https://www.cansavvy.com/)|
+|Package Developers ([Leanbuild](https://github.com/jhudsl/leanbuild))|[John Muschelli](https://johnmuschelli.com/), [Candace Savonen](https://www.cansavvy.com/), [Carrie Wright](https://carriewright11.github.io/)|
+|**Art and Design**||
+|Illustrator(s)| Created graphics for the course|
+|Figure Artist(s)| Created figures/plots for course|
+|Videographer(s)| Filmed videos|
+|Videography Editor(s)| Edited film|
+|Audiographer(s)| Recorded audio|
+|Audiography Editor(s)| Edited audio recordings|
+|**Funding**||
+|Funder(s)| Institution/individual who funded course including grant number|
+|Funding Staff| Staff members who help with funding|
+
 
 ### Session info
-```{r}
+```{r, echo = FALSE}
 devtools::session_info()
 ```
 
