--- a/About.Rmd
+++ b/About.Rmd
@@ -2,7 +2,7 @@
 title: "About"
 ---
 
-# About the Authors
+# About the Authors {-}
 
 These credits are based on our [course contributors table guidelines](https://github.com/jhudsl/DaSL_Course_Template_Bookdown/wiki/How-to-give-credits).
 
@@ -38,7 +38,7 @@ These credits are based on our [course contributors table guidelines](https://gi
 |Funding Staff| Staff members who help with funding|
 
 
-### Session info
+
 ```{r, echo = FALSE}
 devtools::session_info()
 ```
