adding spacing to About.Rmd - compatible with Leanpub

--- a/About.Rmd
+++ b/About.Rmd
@@ -6,6 +6,9 @@ title: "Title of Course"
 
 These credits are based on our [course contributors table guidelines](https://github.com/jhudsl/DaSL_Course_Template_Bookdown/wiki/How-to-give-credits).
 
+&nbsp;
+&nbsp;
+
 |Credits|Names|
 |-------|-----|
 |**Pedagogy**||
@@ -37,7 +40,7 @@ These credits are based on our [course contributors table guidelines](https://gi
 |Funder(s)| Institution/individual who funded course including grant number|
 |Funding Staff| Staff members who help with funding|
 
-
+&nbsp;
 
 ```{r, echo = FALSE}
 devtools::session_info()
