--- a/About.Rmd
+++ b/About.Rmd
@@ -1,10 +1,13 @@
 ---
-title: "About"
+title: "Title of Course"
 ---
 
-# About the Authors
+# About the Authors {-}
 
 These credits are based on our [course contributors table guidelines](https://github.com/jhudsl/DaSL_Course_Template_Bookdown/wiki/How-to-give-credits).
+
+&nbsp;
+&nbsp;
 
 |Credits|Names|
 |-------|-----|
@@ -37,8 +40,8 @@ These credits are based on our [course contributors table guidelines](https://gi
 |Funder(s)| Institution/individual who funded course including grant number|
 |Funding Staff| Staff members who help with funding|
 
+&nbsp;
 
-### Session info
 ```{r, echo = FALSE}
 devtools::session_info()
 ```
