--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -9,13 +9,14 @@ leanbuild::set_knitr_image_path()
 
 # Introduction
 
+
 ## Motivation
-This course will cover
 
-**Target Audience:**  
-The course is intended for
 
-**Curriculum:**  
-The curriculum will cover
+## Target Audience  
 
-This course was funded by
+The course is intended for ...
+
+## Curriculum  
+
+The course covers...
