Replace with a yml approach and update render_book call

--- a/index.Rmd
+++ b/index.Rmd
@@ -8,6 +8,9 @@ biblio-style: apalike
 link-citations: yes
 description: "Description about Course/Book."
 favicon: assets/dasl_favicon.ico
+output:
+    bookdown::word_document2:
+      toc: true
 ---
 
 ```{r include=FALSE}
