--- a/index.Rmd
+++ b/index.Rmd
@@ -1,9 +1,9 @@
 ---
-title: "Course Name "
+title: "Course Name"
 date: "`r format(Sys.time(), '%B, %Y')`"
 site: bookdown::bookdown_site
 documentclass: book
-bibliography: [book.bib, packages.bib]
+bibliography: book.bib
 biblio-style: apalike
 link-citations: yes
 description: "Description about Course/Book."
