--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@ title: "Course Name"
 date: "`r format(Sys.time(), '%B, %Y')`"
 site: bookdown::bookdown_site
 documentclass: book
-bibliography: book.bib
+bibliography: [book.bib]
 biblio-style: apalike
 link-citations: yes
 description: "Description about Course/Book."
