--- a/About.Rmd
+++ b/About.Rmd
@@ -25,7 +25,7 @@ These credits are based on our [course contributors table guidelines](https://gi
 |Template Publishing Engineers|[Candace Savonen], [Carrie Wright]|
 |Publishing Maintenance Engineer|[Candace Savonen]|
 |Technical Publishing Stylists|[Carrie Wright], [Candace Savonen]|
-|Package Developers ([ottr_aide])|[John Muschelli], [Candace Savonen], [Carrie Wright]|
+|Package Developers ([ottrsidekick])|[John Muschelli], [Candace Savonen], [Carrie Wright]|
 |**Art and Design**||
 |Illustrator(s)| Created graphics for the course|
 |Figure Artist(s)| Created figures/plots for course|
@@ -52,7 +52,7 @@ devtools::session_info()
 
 <!-- Links -->
 
-[ottr_aide]: https://github.com/jhudsl/ottr_aide
+[ottrsidekick]: https://github.com/jhudsl/ottrsidekick
 
 <!-- Fill out this table using these instructions: https://github.com/jhudsl/OTTR_Template/wiki/How-to-give-credits
 
