--- a/02-chapter_of_course.Rmd
+++ b/02-chapter_of_course.Rmd
@@ -6,9 +6,11 @@
 Every chapter needs to start out with this chunk of code:
 
 ```{r, include = FALSE}
-ottr::set_knitr_image_path()
+ottrpal::set_knitr_image_path()
 ```
-
+blah
+blah blah
+qwerty
 ## Learning Objectives
 
 *Every chapter also needs Learning objectives that will look like this:  
@@ -63,10 +65,10 @@ dev.off()
 
 ### Image example
 
-How to include a Google slide. It's simplest to use the `ottr` package:
+How to include a Google slide. It's simplest to use the `ottrpal` package:
 
 ```{r, fig.align='center', echo = FALSE, fig.alt= "Major point!! example image"}
-ottr::include_slide("https://docs.google.com/presentation/d/1YmwKdIy9BeQ3EShgZhvtb3MgR8P6iDX4DfFD65W_gdQ/edit#slide=id.gcc4fbee202_0_141")
+ottrpal::include_slide("https://docs.google.com/presentation/d/1YmwKdIy9BeQ3EShgZhvtb3MgR8P6iDX4DfFD65W_gdQ/edit#slide=id.gcc4fbee202_0_141")
 ```
 
 But if you have the slide or some other image locally downloaded you can also use html like this:
