--- a/02-chapter_of_course.Rmd
+++ b/02-chapter_of_course.Rmd
@@ -15,7 +15,10 @@ bhisufbius
 
 www.abiudfbaisbuasv.com
 https://aisudhgfuaisbdviuabsudivbasuidvbiuadv.com
-
+blah blah
+https://asbuidbfisdbfusdibf
+blah blah
+https://asbuidbfisdsomethingsomething
 
 ## Learning Objectives
 
