adding initial version of reflection box

--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -48,6 +48,15 @@ dictionary text
 
 </div>
 
+
+Here is a `<div class = "reflection">` box:
+
+<div class = "reflection">
+
+reflection text
+
+</div>
+
 ## Motivation
 
 
