fixing rendering of rest of ch 2

--- a/02-chapter_of_course.Rmd
+++ b/02-chapter_of_course.Rmd
@@ -28,7 +28,7 @@ For this chapter, we'll need the following packages attached:
 library(magrittr)
 ```
 
-# Topic of Section
+## Topic of Section
 
 You can write all your text in sections like this!
 
